--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="h2-heading">Offered services</h2>
-                    <p class="p-heading">Web design and development have been my bread and butter for more than 5 years. During that time I've discovered that I can help startups and companies with the following services</p>
+                    <h2 class="h2-heading">Our business philosophy</h2>
+                    <p class="p-heading">Our philosophy of management has always been, that the corporate enterprises must be managed not merely in the interests of their owners, but equally in those of their employees, of the consumers of their products, of the local community and finally of the world as a whole.</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
