--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-box">
-                        <i class="far fa-gem"></i>
-                        <h4>DESIGN</h4>
-                        <p>Successful online projects start with good design. It establishes a solid foundation for future development and allows for long term growth</p>
+                        
+                        <h4>The highest moral and ethical standards;</h4>
+                        <p>High moral and ethics are the base foundation of our company. It is one of the core pillars of all our firms</p>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
