--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                         
                         <!-- Text Container -->
                         <div class="text-container">
-                            <h2>Why Work With Me</h2>
-                            <p>I am a great communicator and love to invest the necessary time to understand the customer's problem very well</p>
+                            <h2>What We Do</h2>
+                            <p>We are the holding company and the managing firm for Hafzan companies, we love to invest the necessary time to understand major problems across industries and try to come up with innovative and sustainable ways to fix it</p>
                             <h5>DESIGN TOOLS</h5>
                             <p>My favorite design tools are Photoshop and Illustrator but I can create designs in Figma, Sketch and Adobe XD too</p>
                             <h5>DEVELOPMENT SKILLS</h5>
@@ -489,7 +489,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Contact details</h2>
-                    <p class="p-heading">For any type of online project please don't hesitate to get in touch with me. The fastest way is to send me your message using the following email <a class="blue no-line" href="#your-link">contact@domain.com</a></p>
+                    <p class="p-heading">For any queries please don't hesitate to get in touch with us. The fastest way is to send us your message using the form below</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
