--- a/index.html
+++ b/index.html
@@ -181,20 +181,12 @@
                         <!-- Text Container -->
                         <div class="text-container">
                             <h2>What We Do</h2>
-                            <p>We are the holding company and the managing firm for Hafzan companies, we love to invest the necessary time to understand major problems across industries and try to come up with innovative and sustainable ways to fix it</p>
-                            <h5>DESIGN TOOLS</h5>
-                            <p>My favorite design tools are Photoshop and Illustrator but I can create designs in Figma, Sketch and Adobe XD too</p>
-                            <h5>DEVELOPMENT SKILLS</h5>
-                            <p>I am familiar and work on a daily basis with HTML, CSS, JavaScript, Bootstrap and other modern frameworks</p>
-                            
-                            <div class="icons-container">
-                                <img src="images/details-icon-photoshop.png" alt="alternative">
-                                <img src="images/details-icon-illustrator.png" alt="alternative">
-                                <img src="images/details-icon-html.png" alt="alternative">
-                                <img src="images/details-icon-css.png" alt="alternative">
-                                <img src="images/details-icon-bootstrap.png" alt="alternative">
-                                <img src="images/details-icon-javascript.png" alt="alternative">
-                            </div> <!-- end of icons-container -->
+                            <p>We are the holding company and the managing firm for Hafzan companies, we love to invest the necessary time to understand major problems across industries and try to come up with innovative and sustainable ways to fix those problems</p>
+                            <p class="blue">Areas of our core focus are as follows</p>
+                            <h5>SUSTAINABILITY</h5>
+                            <p>We aim to develop systems that works for the benefit of environment and humanity as a whole.</p>
+                            <h5>GROWTH</h5>
+                            <p>We use the best technologies and business strategies to grow our companies without causing any harm to our environment</p>                                        
                         </div> <!-- end of text-container -->
                         <!-- end of text container -->
 
