--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="h2-heading">Delivered projects</h2>
-                    <p class="p-heading">Listed below are some of the most representative projects I've worked on. They range from basic web design for presentation sites to advanced web development for online shops</p>
+                    <h2 class="h2-heading">Our Companies</h2>                    
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -215,7 +214,7 @@
                                 <img class="img-fluid" src="images/project-1.jpg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Jumbotron, <strong>Project:</strong> web design for their corporate websites and landing pages for marketing campaigns <a class="blue" href="project.html">details</a></p>
+                        <p><strong>Name</strong> Hafzan Technologies </br><strong>What does it do:</strong>Hafzan Technologies is the flagship company of our group, it creates amazing products from complete operating systems to web apps, AI scripts and much more. It's a leading company in areas of future technologies such as Artificial intelligence, crypto, fintech and cybersecurity<a class="blue" href="project.html">Read more</a></p>
                     </div> <!-- end of text-container -->
                     <div class="text-container">
                         <div class="image-container">
@@ -223,7 +222,7 @@
                                 <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Carsrepo, <strong>Project:</strong> designed and developed modern platform for purchasing second hand cars online <a class="blue" href="project.html">details</a></p>
+                        <p><strong>For:</strong> Crystal Crafts, <strong>What does it do:</strong>Crystal Crafts designs, manufacturers and trade ornaments studded with diamonds, sapphire, Ruby and other precious gem stones alongside ornaments made of gold and silver<a class="blue" href="project.html">Read more</a></p>
                     </div> <!-- end of text-container -->
                     <div class="text-container">
                         <div class="image-container">
