--- a/index.html
+++ b/index.html
@@ -202,39 +202,17 @@
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-12">   
+                              
                     <div class="text-container">
                         <div class="image-container">
-                            <a href="project.html">
-                                <img class="img-fluid" src="images/project-1.jpg" alt="alternative">
+                            <a href="crsyatlos_release.html">
+                                <img class="img-fluid" src="images/crystalos1.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>Name</strong> Hafzan Technologies </br><strong>What does it do:</strong>Hafzan Technologies is the flagship company of our group, it creates amazing products from complete operating systems to web apps, AI scripts and much more. It's a leading company in areas of future technologies such as Artificial intelligence, crypto, fintech and cybersecurity <a class="blue" href="project.html">   Read more</a></p>
+                        <p><strong>Hafzan Technologies </strong> to release it's first public version of it's own operation system Crsyatal OS. First looks released  <a class="blue" href="crystalos_release.html"> Read more</a></p>
                     </div> <!-- end of text-container -->
-                    <div class="text-container">
-                        <div class="image-container">
-                            <a href="project.html">
-                                <img class="img-fluid" src="images/project-2.jpg" alt="alternative">
-                            </a>
-                        </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Crystal Crafts </br><strong>What does it do:</strong>Crystal Crafts designs, manufacturers and trade ornaments studded with diamonds, sapphire, Ruby and other precious gem stones alongside ornaments made of gold and silver <a class="blue" href="project.html">   Read more</a></p>
-                    </div> <!-- end of text-container -->
-                    <div class="text-container">
-                        <div class="image-container">
-                            <a href="project.html">
-                                <img class="img-fluid" src="images/project-3.jpg" alt="alternative">
-                            </a>
-                        </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Truevideo, <strong>Project:</strong> created a custom video editing and upload web app for this awesome team <a class="blue" href="project.html">details</a></p>
-                    </div> <!-- end of text-container -->
-                    <div class="text-container">
-                        <div class="image-container">
-                            <a href="project.html">
-                                <img class="img-fluid" src="images/project-4.jpg" alt="alternative">
-                            </a>
-                        </div> <!-- end of image-container -->
-                        <p><strong>For:</strong> Evolosim, <strong>Project:</strong> complete redesign of their corporate website and platform update for their online shop <a class="blue" href="project.html">details</a></p>
-                    </div> <!-- end of text-container -->
+                    
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
