--- a/index.html
+++ b/index.html
@@ -212,6 +212,15 @@
                         </div> <!-- end of image-container -->
                         <p><strong>Hafzan Technologies </strong> to release it's first public version of it's own operation system Crsyatal OS. First looks released  <a class="blue" href="crystalos_release.html"> Read more</a></p>
                     </div> <!-- end of text-container -->
+
+                    <div class="text-container">
+                        <div class="image-container">
+                            <a href="crsyatlos_release.html">
+                                <img class="img-fluid" src="images/crystalos0.png" alt="alternative">
+                            </a>
+                        </div> <!-- end of image-container -->
+                        <p><strong>Hafzan Technologies </strong> to start working on it's own operating system, named Crsyatl OS  <a class="blue" href="crystalos_dev.html"> Read more</a></p>
+                    </div> <!-- end of text-container -->
                     
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
