--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    
+                    Proudly Made with Open Source Technology
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
