--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <div class="text-container">
                             <h2>What We Do</h2>
                             <p>We are a core investment holding company and the managing firm for Hafzan companies, we love to invest the necessary time to understand major problems across industries and try to come up with innovative and sustainable ways to fix those problems</p>
-                            <p class="blue">Areas of our core focus are as follows :   </p>
+                            <p class="blue">Areas of our core focus :   </p>
                             <h5>SUSTAINABILITY</h5>
                             <p>We aim to develop systems that works for the benefit of environment and humanity as a whole.</p>
                             <h5>GROWTH</h5>
