--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                 <img class="img-fluid" src="images/crystalos0.png" alt="alternative">
                             </a>
                         </div> <!-- end of image-container -->
-                        <p><strong>Hafzan Technologies </strong> to start working on it's own operating system, named Crsyatl OS  <a class="blue" href="crystalos_dev.html"> Read more</a></p>
+                        <p><strong>Hafzan Technologies </strong> to start working on it's own operating system, named Crsytal OS  <a class="blue" href="crystalos_dev.html"> Read more</a></p>
                     </div> <!-- end of text-container -->
                     
                 </div> <!-- end of col -->
