--- a/index.html
+++ b/index.html
@@ -321,15 +321,15 @@
                     <!-- Contact Form -->
                     <form id="contactForm" action="https://airform.io/ammanullahbhatti12@gmail.com" method="POST">
                         <div class="form-group">
-                            <input type="text" class="form-control-input" id="cname" required>
+                            <input type="text" name="name" class="form-control-input" id="cname" required>
                             <label class="label-control" for="cname">Name</label>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control-input" id="cemail" required>
+                            <input type="email" name="email" class="form-control-input" id="cemail" required>
                             <label class="label-control" for="cemail">Email</label>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control-textarea" id="cmessage" required></textarea>
+                            <textarea name="description" class="form-control-textarea" id="cmessage" required></textarea>
                             <label class="label-control" for="cmessage">Project details</label>
                         </div>
                         <div class="form-group">
