--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#contact">Contact</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tools</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown01">
+                            <a class="dropdown-item page-scroll" href="averagingcalc.html">Share average calculator</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="crystalcrafts.html"></a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="privacy.html"></a>
+                        </div>
+                    </li>
                 </ul>               
             </div> <!-- end of navbar-collapse -->
         </div> <!-- end of container -->
