--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="author" content="Hafzan">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-	<meta property="og:site_name" content="" /> <!-- website name -->
-	<meta property="og:site" content="" /> <!-- website link -->
-	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
+	<meta property="og:site_name" content="Hafzan Holdings" /> <!-- website name -->
+	<meta property="og:site" content="Hafzan Holdings" /> <!-- website link -->
+	<meta property="og:title" content="Hafzan Holdings | Home"/> <!-- title shown in the actual shared post -->
+	<meta property="og:description" content="Hafzan Holdings is the principal investment holding company and promoter of Hafzan companies" /> <!-- description shown in the actual shared post -->
 	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
