--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Hafzan Holdings is the principal investment holding company and promoter of Hafzan companies">
-    <meta name="author" content="Hafzan">
+    <meta name="description" content="Istanbul contemporary is world's digital art gallery">
+    <meta name="author" content="Abdul Hamid">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-	<meta property="og:site_name" content="Hafzan Holdings" /> <!-- website name -->
-	<meta property="og:site" content="Hafzan Holdings" /> <!-- website link -->
-	<meta property="og:title" content="Hafzan Holdings | Home"/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="Hafzan Holdings is the principal investment holding company and promoter of Hafzan companies" /> <!-- description shown in the actual shared post -->
+	<meta property="og:site_name" content="Istanbul contemporary" /> <!-- website name -->
+	<meta property="og:site" content="Istanbul contemporary" /> <!-- website link -->
+	<meta property="og:title" content="Istanbul contemporary | Home"/> <!-- title shown in the actual shared post -->
+	<meta property="og:description" content="Istanbul contemporary is world's first digital art gallery" /> <!-- description shown in the actual shared post -->
 	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Hafzan Holdings | Home</title>
+    <title>Istanbul contemporary | Home</title>
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -83,8 +83,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h1 class="h1-large">Hafzan Holdings</h1>
-                        <a class="btn-solid-lg page-scroll" href="#about">Discover</a>
+                        <h1 class="h1-large">Istanbul Contemporary</h1>
+                        <a class="btn-solid-lg page-scroll" href="#about">Explore</a>
                         <a class="btn-outline-lg page-scroll" href="#contact"><i class="fas fa-user"></i>Contact Us</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -100,8 +100,8 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="text-container first">
-                        <h2>Welcome to Hafzan Holdings</h2>
-                        <p>Hafzan Holdings Private Limited is the principal investment holding company and promoter of Hafzan companies </p>
+                        <h2>Welcome to Istanbul Contemporary</h2>
+                        <p>Istanbul Contemporary is world's first digital art gallery, we make digital art as well as partner with other amazing creators in the digital art space </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->          
             </div> <!-- end of row -->
@@ -115,8 +115,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="h2-heading">Our business philosophy</h2>
-                    <p class="p-heading">Our philosophy of management has always been, that the corporate enterprises must be managed not merely in the interests of their owners, but equally in those of their employees, of the consumers of their products, of the local community and finally of the world as a whole. We only invest in companies that fulfills the above criteria</p>
+                    <h2 class="h2-heading">Our Collections</h2>
+                    <p class="p-heading">NFT collections belonging to us and our partners</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
