--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                 <div class="col-lg-4">
 
                     <div class="text-box">     
-                        <h4>The highest moral and ethical standards;</h4>
-                        <p>High moral and ethics are the base foundation of our company. It is one of the core pillars of our company</p>
+                        <img class="img-fluid" src="images/crystalos1.png" alt="alternative">
+                        <h4>High moral and ethics are the base foundation of our company. It is one of the core pillars of our company</h4>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
