--- a/index.html
+++ b/index.html
@@ -123,28 +123,28 @@
                 <div class="col-lg-4">
 
                     <div class="text-box">     
-                        <img class="img-fluid" src="images/crystalos1.png" alt="alternative">
-                        <h4>Collection : Sassy eyes</h4>
+                        <img class="img-fluid" src="images/deer-6819296.jpg" alt="alternative">
+                        <h4>Collection : Winters</h4>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-box">                      
-                        <img class="img-fluid" src="images/crystalos1.png" alt="alternative">
-                        <h4>Collection : Evening Sky</h4>                       
+                        <img class="img-fluid" src="images/small-poly-3350170.jpg" alt="alternative">
+                        <h4>Collection : Poly Beasts</h4>                       
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                
               <div class="col-lg-4">
                     <div class="text-box">
-                        <img class="img-fluid" src="images/crystalos1.png" alt="alternative">
-                        <h4>Collection : Ottoman Europe</h4>                       
+                        <img class="img-fluid" src="images/alhambra-967024.jpg" alt="alternative">
+                        <h4>Collection : Al Hamra Palace</h4>                       
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
 
                <div class="col-lg-4">
                     <div class="text-box">
-                        <img class="img-fluid" src="images/crystalos1.png" alt="alternative">
-                        <h4>Collection : Ottoman Europe</h4>                       
+                        <img class="img-fluid" src="images/pexels-yunus-tuğ-8071161.jpg" alt="alternative">
+                        <h4>Collection : Istanbul</h4>                       
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
 
@@ -368,7 +368,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © <a class="no-line" href="#your-link">Hafzan Holdings Private Limited</a></p>
+                    <p class="p-small">Copyright © <a class="no-line" href="#your-link">Istanbul contemporary</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
