--- a/index.html
+++ b/index.html
@@ -123,27 +123,27 @@
                 <div class="col-lg-4">
 
                     <div class="text-box">     
-                        <img class="img-fluid" src="images/deer-6819296.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/deer-6819296.jpg" alt="alternative"></br>
                         <h4>Collection : Winters</h4>
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
                     <div class="text-box">                      
-                        <img class="img-fluid" src="images/small-poly-3350170.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/small-poly-3350170.jpg" alt="alternative"></br>
                         <h4>Collection : Poly Beasts</h4>                       
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
                
               <div class="col-lg-4">
                     <div class="text-box">
-                        <img class="img-fluid" src="images/alhambra-967024.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/alhambra-967024.jpg" alt="alternative"></br>
                         <h4>Collection : Al Hamra Palace</h4>                       
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
 
                <div class="col-lg-4">
                     <div class="text-box">
-                        <img class="img-fluid" src="images/pexels-yunus-tuğ-8071161.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/pexels-yunus-tuğ-8071161.jpg" alt="alternative"></br>
                         <h4>Collection : Istanbul</h4>                       
                     </div> <!-- end of text-box -->
                 </div> <!-- end of col -->
