--- a/index.html
+++ b/index.html
@@ -58,12 +58,16 @@
                         <a class="nav-link page-scroll" href="#services">Services</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Our Companies</a>
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Our Collections</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item page-scroll" href="hafzantech.html">Hafzan Technologies</a>
+                            <a class="dropdown-item page-scroll" href="www.google.com">Winters</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item page-scroll" href="crystalcrafts.html">Crystal Crafts</a>
-                            <div class="dropdown-divider"></div>                
+                            <a class="dropdown-item page-scroll" href="">Poly Beasts</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="">Al Hamra Palace</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item page-scroll" href="">Ottoman Empire</a>
+                            <div class="dropdown-divider"></div>
                         </div>
                     </li>           
                     <li class="nav-item">
@@ -165,12 +169,12 @@
                         <!-- Text Container -->
                         <div class="text-container">
                             <h2>What We Do</h2>
-                            <p>We are a core investment holding company and the managing firm for Hafzan companies, we love to invest the necessary time to understand major problems across industries and try to come up with innovative and sustainable ways to fix those problems</p>
+                            <p>We create, buy and sell digital pieces of art which are non fungible in nature (NFTs)</p>
                             <p class="blue">Areas of our core focus :   </p>
-                            <h5>SUSTAINABILITY</h5>
-                            <p>We aim to develop systems that works for the benefit of environment and humanity as a whole.</p>
-                            <h5>GROWTH</h5>
-                            <p>We use the best technologies and business strategies to grow our companies.</p>                                        
+                            <h5>Non Fungibility</h5>
+                            <p>Every piece across are collections shares one commonality and that is all of our artworks are rare in nature. We only sell pieces that are rare and hard to replicate</p>
+                            <h5>Quality</h5>
+                            <p>The other commonality of our artworks across all our collections is that all of them are of top-notch quality, we pay special attention to details and colours and only after thorough analysis we put it for listing only if it has passed all our quality tests</p>                                        
                         </div> <!-- end of text-container -->
                         <!-- end of text container -->
 
