--- a/index.html
+++ b/index.html
@@ -195,9 +195,15 @@
     </div> <!-- end of container -->
     <!-- end of section divider -->
 
+    <!-- Showcase -->
+    <img class="img-fluid" src="images/winter002.jpg" alt="alternative">
+    <img class="img-fluid" src="images/alhambra-2044399.jpg" alt="alternative">
+    <img class="img-fluid" src="images/winter007.jpg" alt="alternative">
+    <img class="img-fluid" src="images/night-4526128.jpg" alt="alternative">
+
     <!-- Questions -->
     <div class="accordion-1">
-        <div class="container">
+        <div class="container>
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="h2-heading">Frequent questions</h2>
@@ -210,60 +216,59 @@
                         <div class="card">
                             <div class="card-header" id="headingOne">
                                 <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Can we buy shares of Hafzan Holdings ?
+                                    What type of art do Istanbul contemporary sell ?
                                 </button>
                             </div>
                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    No, Hafzan Holdings is a private limited company and we have no plans to go public or get listed in near future.
+                                    We only sell digital art that passes out Fungibility and Quality tests
                                 </div>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-header" id="headingTwo">
                                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    What are the reasons one should not invest ?
+                                    Why should one by digital artworks ?
                                 </button>
                             </div>
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    There are no reasons not to invest, global inflation is at 3.6% that means if you hold onto your cash it will depreciate by 3.6% every year and the best way to avoid this depreciation of money is to invest it hence there are no reasons not to invest.
+                                    Because we believe that the digital art market will soon replace the traditional one so it's important to get on it as soon as possible.
                                 </div>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-header" id="headingThree">
                                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    What type of companies do Hafzan Holdings invests in ?
+                                    How can I submit my are to Istanbul contemporary ?
                                 </button>
                             </div>
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    We invest in companies across sectors and industries whose values aligns with our business philosophy of good business ethics, respect for human rights and dignity, professionalism, honestly, fairness and integrity furthermore we do not invest in companies in Defence, Tobacco, Financial services, Banking and Media.
-                                </div>
+                                    Sure you can, just connect to us through the form below and we'll reach out to you
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-header" id="headingFour">
                                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                    What risk management strategies we use ?
+                                    What type of art do Istanbul contemporary sell ?
                                 </button>
                             </div>
                             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    Risk management is an important part of our business philosophy, we mainly look for opportunities where we risk cents to make dollars.
+                                    We sell every type of art expect the explicit ones.
                                 </div>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-header" id="headingFive">
                                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                    How do we analysis other companies ?
+                                    How many collections do Istanbul contemporary hold as of now ?
                                 </button>
                             </div>
                             <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
                                 <div class="card-body">
-                                    We use various advance matrics in our analysis of other companies. We only invest in undervalued profit making companies with a long term perspective in growing sectors.
+                                    As of now, we are holding more than 30 unique digital artworks.
                                 </div>
                             </div>
                         </div>
