--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/ppp.svg" alt="alternative"></a>  
+            <a class="navbar-brand logo-image" href="index.html"><img src="images/IMG_20220201_192710.png" alt="alternative"></a>  
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
             <!-- <a class="navbar-brand logo-text page-scroll" href="index.html"></a> -->
@@ -55,7 +55,7 @@
                         <a class="nav-link page-scroll" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#services">Services</a>
+                        <a class="nav-link page-scroll" href="#services">Gallery</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Our Collections</a>
@@ -288,7 +288,7 @@
                 <div class="col-lg-12">
                     
                     <!-- Contact Form -->
-                    <form id="contactForm" action="https://airform.io/ammanullahbhatti12@gmail.com" method="POST">
+                    <form id="contactForm" action="https://airform.io/istanbul.contemporar@yahoo.com" method="POST">
                         <div class="form-group">
                             <input type="text" name="name" class="form-control-input" id="cname" required>
                             <label class="label-control" for="cname">Name</label>
@@ -299,7 +299,7 @@
                         </div>
                         <div class="form-group">
                             <textarea name="description" class="form-control-textarea" id="cmessage" required></textarea>
-                            <label class="label-control" for="cmessage">Project details</label>
+                            <label class="label-control" for="cmessage">Description</label>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="form-control-submit-button">Submit</button>
