--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/favi.png">
+    <link rel="icon" href="images/20220201_202340.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
