--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <meta name="author" content="Abdul Hamid">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-	<meta property="og:site_name" content="Istanbul contemporary" /> <!-- website name -->
-	<meta property="og:site" content="Istanbul contemporary" /> <!-- website link -->
-	<meta property="og:title" content="Istanbul contemporary | Home"/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="Istanbul contemporary is world's first digital art gallery" /> <!-- description shown in the actual shared post -->
+	<meta property="og:site_name" content="Ottoman Treasury" /> <!-- website name -->
+	<meta property="og:site" content="Ottoman Treasury" /> <!-- website link -->
+	<meta property="og:title" content="Ottoman Treasury | Home"/> <!-- title shown in the actual shared post -->
+	<meta property="og:description" content="Ottoman Treasury is the official treasury of The Sublime Ottoman State" /> <!-- description shown in the actual shared post -->
 	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Istanbul contemporary | Home</title>
+    <title>Ottoman Treasury</title>
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -90,13 +90,8 @@
                         
                         <!-- Text Container -->
                         <div class="text-container">
-                            <h2>What We Do</h2>
-                            <p>We create, buy and sell digital pieces of art which are non fungible in nature (NFTs)</p>
-                            <p class="blue">Areas of our core focus :   </p>
-                            <h5>Non Fungibility</h5>
-                            <p>Every piece across are collections shares one commonality and that is all of our artworks are rare in nature. We only sell pieces that are rare and hard to replicate</p>
-                            <h5>Quality</h5>
-                            <p>The other commonality of our artworks across all our collections is that all of them are of top-notch quality, we pay special attention to details and colours and only after thorough analysis we put it for listing only if it has passed all our quality tests</p>                                        
+                            <h5>The Last Traded Price (LTP) for Ottoman Lira is</h5>
+                            <h2>$ 1.27</h2>                                                       
                         </div> <!-- end of text-container -->
                         <!-- end of text container -->
 
