--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                         <!-- Text Container -->
                         <div class="text-container">
                             <h5>The Last Traded Price (LTP) for Ottoman Lira is</h5>
-                            <h2>$ 1.27</h2>                                                       
+                            <h2>$ 1.27</h2>          
+                            </br></br></br><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/60704468911362332459356687629548909101892447834291361357040784440768183209984/">Buy Ottoman Lira</a>                                                     
                         </div> <!-- end of text-container -->
                         <!-- end of text container -->
 
@@ -69,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Proudly Made with Open Source Technology</br><a href="https://opensea.io/assets/matic/0x2953399124f0cbb46d2cbacd8a89cf0599974963/60704468911362332459356687629548909101892447834291361357040784440768183209984/">Buy Ottoman Lira</a>
+                    Proudly Made with Open Source Technology
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
